# expense-tracker

./: README.md  generate_dummy_pdf.py  pyproject.toml
data/: expenses.db
src/expense_tracker/: __init__.py  app.py  cli.py  database.py  date_utils.py  display.py  export.py  models.py  pdf_parser.py
src/expense_tracker.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/expense_tracker/static/css/: style.css
src/expense_tracker/static/js/: app.js
src/expense_tracker/templates/: dashboard.html
